# cbot

./: .build.yml  .buildinfo  .clang_complete  .gitignore  .gitmodules  .iwyu.sh  .pre-commit-config.yaml  Backends.html  CHANGELOG  Development.html  Install.html  LICENSE.txt  Makefile  Plugins-2.html  Plugins.html  README.md  Tooling.html  User.html  admin.html  alpine.sh  auth.sh  cbot1.0.md  compile_commands.json  dev.html  genindex.html  index.html  make-release.sh  meson.build  meson_options.txt  objects.inv  patch-libircclient-1.10  run.template.sh  sample.cfg  search.html  searchindex.js
.doctrees/: Backends.doctree  Development.doctree  Install.doctree  Plugins-2.doctree  Plugins.doctree  Tooling.doctree  User.doctree  admin.doctree  dev.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yaml  gh-pages.yaml
_sources/: Development.md.txt  Install.md.txt  Plugins.md.txt  Tooling.md.txt  User.md.txt  admin.rst.txt  dev.rst.txt  index.rst.txt
alpinetest/: Dockerfile
deploy/: .gitignore  Dockerfile  README.md  run.sh  stephen@brennan.io.rsa.pub
deploy/alpine/: APKBUILD
doc/: 00-Plugins.md  Backends.md  Development.md  Plugins-2.md  User.md  admin.rst  conf.py.in  dev.rst  doxygen.ini.in  index.rst  meson.build  run_doxygen_sphinx.sh.in
inc/cbot/: cbot.h  curl.h  db.h  json.h
plugin/: Makefile  annoy.c  aqi.c  become.c  birthday.c  buttcoin.c  emote.c  events.c  greet.c  help.c  help.h  help.md  help_translate.py  ircctl.c  karma.c  lod.c  log.c  magic8.c  name.c  reactrack.c  reply.c  sadness.c  sports_schedule.c  sqlkarma.c  sqlknow.c  tok.c  trivia.c  weather.c  who.c
src/: cbot.c  cbot_cli.c  cbot_cli.h  cbot_handlers.c  cbot_handlers.h  cbot_hashchain.c  cbot_irc.c  cbot_irc.h  cbot_private.h  cbot_signal.c  curl.c  db.c  fmt.c  http.c  json.c  log.c  main.c  tok.c  utf8.h
src/signal/: api.c  backend.c  internal.h  jmsg.c  mention.c  signalcli_bridge.c  signald_bridge.c
src/signald/: api.c  backend.c  internal.h  jmsg.c  mention.c
subprojects/: Unity.wrap  libircclient.wrap  libstephen.wrap  nosj.wrap  sc-argparse.wrap  sc-collections.wrap  sc-lwt.wrap  sc-regex.wrap  sqlite.wrap
testing/: test_coinmarketcap.py
tests/: fmt2.c  mentions.c  mentions.json  meson.build  plugintest.c  plugintest.h  test_name_plugin.c
